--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "cordova-plugin-add-swift-support",
   "version": "2.0.2",
   "description": "Add Swift support to your iOS plugins",
-  "homepage": "https://github.com/akofman/cordova-plugin-add-swift-support",
+  "homepage": "https://github.com/vjard/cordova-plugin-add-swift-support",
   "author": {
-    "name": "Alexis Kofman",
-    "email": "alexis.kofman@gmail.com",
-    "url": "http://twitter.com/alexiskofman"
+    "name": "Vincent Jardel",
+    "email": "vincent.jardel@dolby.com",
+    "url": "http://twitter.com/vjard"
   },
   "cordova": {
     "id": "cordova-plugin-add-swift-support",
@@ -16,7 +16,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/akofman/cordova-plugin-add-swift-support.git"
+    "url": "https://github.com/vjard/cordova-plugin-add-swift-support.git"
   },
   "keywords": [
     "cordova",
